--- a/Models/TTS3_Vocoder/2024.06.12_FreeV.md
+++ b/Models/TTS3_Vocoder/2024.06.12_FreeV.md
@@ -60,7 +60,28 @@ In this work, we introduce \textit{FreeV}, a streamlined GAN vocoder enhanced wi
 
 ### PriorGrad & SpecGrad
 
+Based on diffusion-based vocoder WaveGrad~\cite{chen2021wavegrad}, which direct reconstruct the waveform through a DDPM process, Lee \textit{et al.} proposed PriorGrad~\cite{lee2021priorgrad} by introducing an adaptive prior $\mathcal{N}(\mathbf{0},\mathbf{\Sigma})$, where $\mathbf{\Sigma}$ is computed from input mel spectrogram $X$. The covariance matrix $\mathbf{\Sigma}$ is given by: $\mathbf{\Sigma}=\mathrm{diag} [(\sigma_1^2,\sigma_2^2,\cdots,\sigma_D^2,)]$, where $\sigma_d^2,$ denotes the signal power at $d$th sample, which is calculated by interpolating the frame energy.  Compared to conventional DDPM-based vocoders, PriorGrad utilizes signal before making the source distribution closer to the target distribution, which simplifies the reconstruction task.
+
+Based on PriorGrad, SpecGrad~\cite{koizumi2022specgrad} proposed adjusting the diffusion noise in a way that aligns its dynamic spectral characteristics with those of the conditioning mel spectrogram. SpecGrad introduced a decomposed covariance matrix and its approximate inverse using the idea from T-F domain filtering, which is conditioned on the mel spectrogram. This method enhances audio fidelity, especially in high-frequency regions. We denote the STFT by a matrix $G$, and the ISTFT by a matrix $G^+$, then the time-varying filter $L$ can be expressed as:
+\begin{equation}
+    L=G^+DG,
+\end{equation}
+where $D$ is a diagonal matrix that defines the filter, and it is obtained from the spectral envelope. Then we can obtain covariance matrix $\Sigma=LL^T$ of the standard Gaussian noise $\mathcal{N}(0,\Sigma)$ in the diffusion process. By introducing more accurate prior to the model, SpecGrad achieves higher reconstruction quality and inference speech than PriorGrad.
+
 ### APNet & APNet2
+
+As illustrated in Figure~\ref{fig:overall}, APNet2~\cite{du2023apnet} consists of two components: amplitude spectra predictor (ASP) and phase spectra predictor (PSP). These two components predict the amplitude and phase spectra separately, which are then employed to reconstruct the waveform through ISTFT. The backbone of APNet2 is ConvNeXtV2~\cite{woo2023convnext} block, which is proved has strong modeling capability. In the PSP branch, APNet~\cite{ai2023apnet} proposed the parallel phase estimation architecture at the output end. The parallel phase estimation takes the output of two convolution layers as the pseudo imaginary part $I$ and real part $R$, then obtains the phase spectra by:
+\begin{equation}
+    \arctan(\frac{I}{R})-\frac{\pi}{2}\cdot sgn(I)\cdot[sgn(R)-1]
+\end{equation}
+where $sgn$ is the sign function.
+
+A series of losses are defined in APNet to supervise the generated spectra and waveform. In addition to the losses used in HiFiGAN~\cite{kong2020hifigan}, which include Mel loss $\loss{mel}$, generator loss $\loss{g}$, discriminator loss $\loss{d}$, feature matching loss $\loss{fm}$, APNet proposed: 
+\begin{itemize}
+    \item amplitude spectrum loss $\loss{A}$, which is the L2 distance of the predicted and real amplitude;
+    \item  phase spectrogram loss $\loss{P}$, which is the sum of instantaneous phase loss, group delay loss, and phase time difference loss, all phase spectrograms are anti-wrapped;
+    \item STFT spectrogram loss $\loss{S}$, which includes the STFT consistency loss and L1 loss between predicted and real reconstructed STFT spectrogram.
+\end{itemize}
 
 ## 3.Methodology: 方法
 
