--- a/Models/TTS3_Vocoder/2024.06.12_FreeV.md
+++ b/Models/TTS3_Vocoder/2024.06.12_FreeV.md
@@ -85,8 +85,45 @@ A series of losses are defined in APNet to supervise the generated spectra and w
 
 ## 3.Methodology: 方法
 
+### 3.1.Amplitude Prior
+
+In this section, we investigate how to obtain a prior signal closer to the real prediction target, which is the amplitude spectrum. By employing the given Mel spectrum $X$ and the known Mel filter $M$, we aim to obtain an amplitude spectrum $\hat{A}$ that minimizes the distance with the actual amplitude spectrum $A$, while ensuring that the computation is performed with optimal speed, as the following equation:
+\begin{equation}
+    \min\left\lVert \hat{A}M-A \right\rVert_2
+\end{equation}
+We investigated several existing implementations for this task. In Section \ref{sec:specgrad}, the SpecGrad method, $G^+DG\epsilon$ requires prior noise $\epsilon$ as input, therefore unsuitable for our goals. In the implementation by the librosa library~\cite{librosa}, the estimation of $\hat{A}$ employs the Non-Negative Least Squares (NNLS) algorithm to maintain non-negativity. However, this algorithm is slow due to the need for multiple iterations, prompting the pursuit of a swifter alternative. TorchAudio's implementation~\cite{torchaudio} calculates the estimated amplitude spectrum through a singular least squares operation followed by enforcing a minimum threshold to preserve non-negativity. Despite this, the recurring need for the least squares calculation with each inference introduces speed inefficiencies.
+
+Considering that the Mel filter $M$ remains unchanged throughout the calculations, we can pre-compute its pseudo-inverse, denoted as $M^+$. Then, to guarantee the non-negativity of the amplitude spectrum and maintain numerical stability in training, we impose a lower bound of $10^{-5}$ on the values of the approximate amplitude spectrum.
+We find there are some negative values in the pseudo-inversed mel filter, causing negative blocks in estimated amplitude, which can be easily found in Figure \ref{subfig:recon_wo_abs}, so we add an $\mathrm{Abs}$ function to the product of $M^+$ and $X$.
+This allows us to derive the approximate amplitude spectrum $\hat{A}$ using the following equation:
+\begin{equation}
+    \hat{A}=\mathrm{max}(\mathrm{Abs}(M^+X),10^{-5})
+\end{equation}
+ This enables us to efficiently acquire the estimated amplitude spectrum through a single matrix multiplication operation.
+
+### 3.2.Model Structure
+
+Our model architecture is illustrated in Figure 2, which consists of PSP and ASP, and uses ConvNextV2~\cite{woo2023convnext} as the model's basic block. PSP includes an input convolutional layer, eight ConvNeXtV2 blocks, and two convolutional layers for parallel phase estimation structure. 
+
+Diverging from APNet2's ASP, our design substitutes the conventional input convolutional layer with the pre-computed pseudo-inverse Mel filter matrix $M^+$ of the Mel filter $M$ with frozen parameters. Due to the enhancements highlighted in Section \ref{sec:prior} that substantially ease the model's complexity, the number of ConvNeXtV2 blocks is reduced from eight to a single block, thereby substantially reducing both the parameter footprint and computation time. 
+
+Concurrently, the ConvNeXtV2 module's input-output dimensions have been tailored to align with those of the amplitude spectrum, enabling the block to exclusively model the residual between the estimated and real amplitude spectra, further reducing the ASP module's modeling difficulty. Because the input and output dimensions of the ConvNeXtV2 module match the amplitude spectrum, we removed the output convolutional layer from ASP, further reducing the model's parameter count.
+
+### 3.3.Training Criteria
+
+In the choice of discriminators, we followed the setup in APNet2~\cite{du2023apnet}, using MPD and MRD as discriminators and adopting Hinge GAN Loss as the loss function for adversarial learning. We also retained the other loss functions used by APNet2, which is described in Section \ref{sec:apnet}, and the loss function of the generator and discriminator are denoted as:
+\begin{align*}
+    \vspace{-0.2in}
+    \loss{Gen}&=\lam{A}\loss{A}+\lam{P}\loss{P}+\lam{S}\loss{S}+\lam{W}(\loss{mel}+\loss{fm}+\loss{g}) \\
+    \loss{Dis}&=\loss{d}
+    \vspace{-0.2in}
+\end{align*}
+where $\lam{A}$, $\lam{P}$, $\lam{S}$, $\lam{W}$ are the weights of the loss, which are kept the same as in APNet2.
+
 ## 4.Experiments: 实验
 
 ## 5.Results: 结果
 
 ## 6.Conclusions: 结论
+
+> In this paper, we investigated the effectiveness of employing pseudo-inverse to roughly estimate the amplitude spectrum as the initial input of the model. We introduce FreeV, a vocoder framework that leverages estimated amplitude spectrum $\hat{A}$ to simplify the model's predictive complexity. This approach not only reduces the parameter size but also improves the reconstruction quality compared to APNet2. Our experimental results demonstrated that our method could effectively reduce the modeling difficulty by simply replacing the input mel spectrogram with the estimated amplitude spectrum $\hat{A}$.
